--- a/Kaffeplaneten/Kaffeplaneten/Web.config
+++ b/Kaffeplaneten/Kaffeplaneten/Web.config
@@ -76,4 +76,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DatbaseModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Models.DatbaseModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CustomerContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Models.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
