--- a/Kaffeplaneten/Kaffeplaneten/bin/Kaffeplaneten.dll.config
+++ b/Kaffeplaneten/Kaffeplaneten/bin/Kaffeplaneten.dll.config
@@ -77,7 +77,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatbaseModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Models.DatbaseModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="CustomerContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Models.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="Database" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
