--- a/Kaffeplaneten/Kaffeplaneten/bin/Kaffeplaneten.dll.config
+++ b/Kaffeplaneten/Kaffeplaneten/bin/Kaffeplaneten.dll.config
@@ -77,5 +77,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="Database" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|.mdfinitial catalog=Kaffeplaneten.Database;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="Database" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Databasen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
