--- a/Kaffeplaneten/Kaffeplaneten/Web.config
+++ b/Kaffeplaneten/Kaffeplaneten/Web.config
@@ -77,6 +77,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Database" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Kaffeplaneten.Databasen;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="Database" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|DatabaseKaffeplaneten.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />
+</connectionStrings>
 </configuration>
