accountView lagt til. oppdatert userController og DBCustomer med metoder for denne

--- a/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
+++ b/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
@@ -132,6 +132,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Views\Product\ProductDetailsView.cshtml" />
+    <Content Include="Views\User\accountView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
