Mye nytt her. UserController har fått nye metoder for endring av brukere. AdressModel lagt til. Bug i databasen fikset, Adresses har nå egen AdressID som primærnøkkel. Bedre navn på metode i DBOrdre og DBCustomer TestingClass oppdatert med test for endring av bruker

--- a/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
+++ b/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="DBOrder.cs" />
+    <Compile Include="Models\AdressModel.cs" />
     <Compile Include="Models\CustomerContext.cs" />
     <Compile Include="DBProduct.cs" />
     <Compile Include="DBuser.cs" />
