UserController oppdatert med metoder for endring av brukerdata. Bug fix/skrivefeil i AdressModel. Lagt til konstruktør i OrderModel. Oppdatert accountView. Lagt til editAccountView. DBCustomer oppdatert med metoder for endring av brukerdata. Bug fix i DBOrder. TestingClass ryddet og oppgradert. Slett databasen etter denne. Liten endring i hvordan adresser lagres.

--- a/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
+++ b/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
@@ -134,6 +134,7 @@
     <Content Include="Views\Product\ProductDetailsView.cshtml" />
     <Content Include="Views\User\accountView.cshtml" />
     <Content Include="Views\User\orderHistoryView.cshtml" />
+    <Content Include="Views\User\editAccountView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
