--- a/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
+++ b/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
@@ -141,7 +141,10 @@
     <Content Include="Views\User\editAccountView.cshtml" />
     <Content Include="Views\Security\Loginview.cshtml" />
     <Content Include="Views\Order\orderHistoryView.cshtml" />
-    <Content Include="Views\Order\recitView.cshtml" />
+    <Content Include="Views\Order\receiptView.cshtml" />
+    <Content Include="Views\Shared\OrderView.cshtml" />
+    <Content Include="Views\Shared\customerView.cshtml" />
+    <Content Include="Views\Order\confirmOrderView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -184,7 +187,6 @@
     <Content Include="Views\User\createUser.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Product\AllProducts.cshtml" />
-    <Content Include="Views\Order\OrderView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
