--- a/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
+++ b/Kaffeplaneten/Kaffeplaneten/Kaffeplaneten.csproj
@@ -122,6 +122,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\Kaffe.md" />
+    <Content Include="README.md" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\JavascriptFunksjoner.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -181,7 +182,7 @@
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestingClass.cs" />
+    <Compile Include="DataCreater.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config">
