Laget en LoggingBLL og en LoggingDAL.
LoggingDAL ettersom den skriver ting på serveren og ikke lokalt. Ifølge: http://www.databaseskill.com/261891/ har den ansvar til å skrive eller lese tekst, binærfiler eller XML/Json  dokumenter på serveren.

Disse er ikke testet, og må testes før de blir tatt i bruk.

--- a/Kaffeplaneten/BLL/BLL.csproj
+++ b/Kaffeplaneten/BLL/BLL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
+    <Compile Include="LoggingBLL.cs" />
     <Compile Include="OrderBLL.cs" />
     <Compile Include="ProductBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
