Employee lagt til i databasen. DAL, Model og BLL for employee lagt til. Slett databasen og kjør med DataCreator på nytt. Databasen måtte endres litt for å implementere employees

--- a/Kaffeplaneten/DAL/DAL.csproj
+++ b/Kaffeplaneten/DAL/DAL.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="CustomerContext.cs" />
     <Compile Include="CustomerDAL.cs" />
+    <Compile Include="EmployeeDAL.cs" />
     <Compile Include="LoggingDAL.cs" />
     <Compile Include="OrderDAL.cs" />
     <Compile Include="ProductDAL.cs" />
