--- a/Kaffeplaneten/BLL/BLL.csproj
+++ b/Kaffeplaneten/BLL/BLL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerBLL.cs" />
+    <Compile Include="EmployeeBLL.cs" />
     <Compile Include="LoggingBLL.cs" />
     <Compile Include="OrderBLL.cs" />
     <Compile Include="ProductBLL.cs" />
