--- a/Kaffeplaneten/Administrasjon/Web.config
+++ b/Kaffeplaneten/Administrasjon/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -77,5 +77,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="DatabaseKaffeplaneten" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Magnus\Documents\GitHubVisualStudio\Webapplikasjoner\Kaffeplaneten\App_Data\DatabaseKaffeplaneten.mdf initialcatalog=Kaffeplaneten.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="DatabaseKaffeplaneten" connectionString="data source=(LocalDb)\v12.0;AttachDbFilename=C:\Users\minik\Desktop\Webapplikasjoner\Kaffeplaneten\Database\DatabaseKaffeplaneten.mdf initialcatalog=Kaffeplaneten.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
