EnterpriseLibrary.Logging lagt til

--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -127,6 +127,12 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Security\Loginview.cshtml" />
+    <None Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
