--- a/Kaffeplaneten/Kaffeplaneten/Web.config
+++ b/Kaffeplaneten/Kaffeplaneten/Web.config
@@ -77,5 +77,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseKaffeplaneten" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Magnus\Documents\GitHubVisualStudio\Webapplikasjoner\Kaffeplaneten\App_Data\DatabaseKaffeplaneten.mdf initialcatalog=Kaffeplaneten.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="DatabaseKaffeplaneten" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Christer\Source\Repos\Webapplikasjoner\Kaffeplaneten\Database\DatabaseKaffeplaneten.mdf initialcatalog=Kaffeplaneten.CustomerContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
