--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -130,6 +130,8 @@
     </Content>
     <Content Include="Views\Security\Loginview.cshtml" />
     <Content Include="Views\AdminProduct\Edit.cshtml" />
+    <Content Include="Views\AdminEmployee\EmployeeEditorView.cshtml" />
+    <Content Include="Views\Layout\AdministratorBar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -139,10 +141,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Content\Controllers\AdminProductController.cs" />
-    <Compile Include="Content\Controllers\LayoutController.cs" />
-    <Compile Include="Content\Controllers\SecurityController.cs" />
-    <Compile Include="Content\Controllers\SuperController.cs" />
+    <Compile Include="Controllers\AdminEmployeeController.cs" />
+    <Compile Include="Controllers\AdminProductController.cs" />
+    <Compile Include="Controllers\LayoutController.cs" />
+    <Compile Include="Controllers\SecurityController.cs" />
+    <Compile Include="Controllers\SuperController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -167,10 +170,6 @@
     <ProjectReference Include="..\BLL\BLL.csproj">
       <Project>{b3a660dc-9406-4982-b83c-3edb0c773424}</Project>
       <Name>BLL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{67e79519-ba4e-462d-9aed-33451ea505a7}</Project>
-      <Name>DAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\Model\Models.csproj">
       <Project>{36742b1e-cc85-48b6-aafc-a673d40ebe70}</Project>
