Gjort ferdig Administratorbar. Gjort mye endringer i viewbags og lagt til ulike sessions for sjekk for dynamisk rettighetsbar

--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -113,7 +113,6 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -131,6 +130,8 @@
     <Content Include="Views\AdminEmployee\EmployeeEditorView.cshtml" />
     <Content Include="Views\AdminProduct\Add.cshtml" />
     <Content Include="Views\Security\LoggedIn.cshtml" />
+    <Content Include="Web.config" />
+    <Content Include="Views\Layout\Home.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
