Lagt til kunderedigering

--- a/Kaffeplaneten/Administrasjon/Administrasjon.csproj
+++ b/Kaffeplaneten/Administrasjon/Administrasjon.csproj
@@ -132,6 +132,9 @@
     <Content Include="Views\Security\LoggedIn.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Views\Layout\Home.cshtml" />
+    <Content Include="Views\AdminCustomer\List.cshtml" />
+    <Content Include="Views\AdminCustomer\AllCustomers.cshtml" />
+    <Content Include="Views\AdminCustomer\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -141,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminCustomerController.cs" />
     <Compile Include="Controllers\AdminEmployeeController.cs" />
     <Compile Include="Controllers\AdminProductController.cs" />
     <Compile Include="Controllers\LayoutController.cs" />
